...
      container: true,
      explicitChildNodes: true,
      label: usage == null
          ? 'CPU status: $status'
          : 'CPU status: Audio thread ${usage!.cpu1}%, Overall CPU ${usage!.cpu2}%',
      child: Column(
        key: const ValueKey('system-cpu-status'),
        crossAxisAlignment: CrossAxisAlignment.stretch,
        children: [
          Semantics(
            header: true,
            child: Text('CPU', style: theme.textTheme.titleSmall),
          ),
...
